# amazon-sp-api-mcp

./: README.md  pyproject.toml
amazon_sp_api_mcp/: __init__.py  config.py  server.py
amazon_sp_api_mcp/auth/: __init__.py  aws_auth.py  lwa_auth.py
amazon_sp_api_mcp/client/: error_handler.py  http_client.py  rate_limiter.py
amazon_sp_api_mcp/tools/: __init__.py  auth_tools.py  catalog_tools.py  financial_tools.py  orders_tools.py  reports_tools.py
examples/: inventory_management.py  reports_example.py
tests/: __init__.py  test_auth.py  test_client.py  test_config.py
